-Minor fixes -Fixed the left and right images loading on mobile devices causing horrible lag. - proud to have done this all on my phone!
git-svn-id: https://subversion.assembla.com/svn/mapler-me@683 7cbc8f23-9b70-4854-b091-be65f742de0c

--- a/trunk/website/inc/css/style.css
+++ b/trunk/website/inc/css/style.css
@@ -137,7 +137,7 @@ html { overflow-x: hidden; }
 		background-image: none !important;
 	}
 	
-	.right, .left {
+	.right-bg, .left-bg {
 		display: none;
 	}
 	
